Adapt statement and submission views for output-only feature

--- a/app/org/iatoki/judgels/sandalphon/problem/programming/statement/blackbox/blackBoxViewStatementView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/problem/programming/statement/blackbox/blackBoxViewStatementView.scala.html
@@ -2,7 +2,9 @@
 @import play.i18n.Messages
 @import com.google.common.base.Joiner
 @import org.iatoki.judgels.gabriel.GradingLanguageRegistry
+@import org.iatoki.judgels.gabriel.OutputOnlyMagic
 @import org.iatoki.judgels.gabriel.blackbox.BlackBoxGradingConfig
+@import org.iatoki.judgels.gabriel.blackbox.configs.OutputOnlyGradingConfig
 
 @(postSubmitUri: String, statement: ProblemStatement, blackBoxGradingConfig: BlackBoxGradingConfig, engine: String, allowedGradingLanguageNames: Set[String], reasonNotAllowedToSubmit: String)
 
@@ -42,7 +44,7 @@
 <hr />
 <h4>Submit Solution</h4>
 
-@implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-2", "col-md-10") }
+@implicitFieldConstructor = @{ b3.horizontal.fieldConstructor("col-md-3", "col-md-9") }
 
 @if(reasonNotAllowedToSubmit == null) {
     @b3.form(play.api.mvc.Call("POST", postSubmitUri), 'enctype->"multipart/form-data") {
@@ -52,25 +54,29 @@
 
         @for((k, v) <- blackBoxGradingConfig.getSourceFileFields) {
             <div class="form-group">
-                <label for="@k" class="col-md-2">@v</label>
-                <div class="col-md-10">
+                <label for="@k" class="col-md-3">@v</label>
+                <div class="col-md-9">
                     <input type="file" name="@k">
                 </div>
             </div>
         }
 
-        <div class="form-group">
-            <label for="language" class="col-sm-2 control-label">Language</label>
-            <div class="col-sm-10">
-                <select name="language">
+        @if(blackBoxGradingConfig.isInstanceOf[OutputOnlyGradingConfig]) {
+            <input type="hidden" name="language" value="@OutputOnlyMagic.KEY"/>
+        }else {
+            <div class="form-group">
+                <label for="language" class="col-sm-3 control-label">Language</label>
+                <div class="col-sm-9">
+                    <select name="language">
                     @for((k, v) <- GradingLanguageRegistry.getInstance().getGradingLanguages) {
                         @if(allowedGradingLanguageNames.contains(k)) {
                             <option value="@k">@v</option>
                         }
                     }
-                </select>
+                    </select>
+                </div>
             </div>
-        </div>
+        }
 
         @b3.submit('class -> "btn btn-primary") { @Messages.get("Submit") }
     }
