--- a/app/org/iatoki/judgels/sandalphon/problem/programming/grading/blackbox/outputOnlyGradingConfigView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/problem/programming/grading/blackbox/outputOnlyGradingConfigView.scala.html
@@ -315,5 +315,7 @@ $(document).ready(function() {
         </div>
     </div>
 
+    @b3.select(outputOnlyGradingConfigForm("customScorer"), helperFiles.map(f => f.getName -> f.getName).toSeq ++ Seq("(none)" -> "(None)"), '_label -> "Custom Scorer")
+
     @b3.submit('class -> "btn btn-primary") { @Messages.get("commons.update") }
 }
