--- a/app/org/iatoki/judgels/sandalphon/problem/programming/grading/blackbox/functionalWithSubtasksGradingConfigView.scala.html
+++ b/app/org/iatoki/judgels/sandalphon/problem/programming/grading/blackbox/functionalWithSubtasksGradingConfigView.scala.html
@@ -471,6 +471,8 @@ $(document).ready(function() {
         </div>
     </div>
 
+    @b3.select(functionalWithSubtasksGradingConfigForm("customScorer"), helperFiles.map(f => f.getName -> f.getName).toSeq ++ Seq("(none)" -> "(None)"), '_label -> "Custom Scorer")
+
     @b3.submit('class -> "btn btn-primary") { @Messages.get("commons.update") }
 }
 
